Features:
- Updated to a cleaner web-font. (Roboto) - Tooltip is now fixed to bottom-right of screen.
- Interface is more 'flexible'
- Improved window layout for larger screens. - Scrollbars on visible when needed now.
- New CSS styled scrollbars.
- Fixed various rendering errors.
- Updated button styles; and color. Flashes on Clicks. - Updated tab text
- Resolved log messages wrapping errors.
Notes: CSS is a hodgepodge of spaghetti-coding right now. Anyone is welcome to refine.

v 1.1.7.7 (27 nov)

Elders duration and energy bonus slightly
Elder energy bonus will be now calculated correctly

v 1.1.7.6 (26 nov)

Changes by coderpatsy:

- Fix space beacons producing less starcharts than they should
- Fix display of trade race buy/sell resource names

Changes by ArcanisCz:

-Header toolbar initial render-update

Space Manufacturing ratio was reduced from 100% to 75%
Space Manufacturing will not have effect on Planet Crackers anymore
Antimatter Bases

v 1.1.7.5 (25 nov)

Factory Processing will now have effect on oil
Price of tankers was reduced from 225 ships to 200
Alicorn summon chance was increased for Sky Palace and UU
Space Elevators will now boost H. Fractures by 0.1% of global production ratio

v 1.1.7.4 (24 nov)

Fixed star achievements not being unlocked correctly
Fluidized Reactors
Trade tab will be highlighted if elders have arrived

v 1.1.7.3 (22 nov)

AM Reactors and Beacons will now require less antimatter.
AM Reactors MK2
Automated Plants

v 1.1.7.2 (19 nov)

Elders will now stay for 50 years instead of 3. Every sacrificed necrocorn will extend this value by 25. 
Elders trade will give more starcharts and have a small chance of giving an Relic
Unicorn Utopia price was significantly reduced
Tachyon Accelerators

v 1.1.7.1 (18 nov)

Every manuscript will now give a small amount of maximum culture.
Insane Space Oddity will now let you complete it with <10 paragon points
Space manufacturing effect was reduced from 100% to 75%

v 1.1.7.0 (15 nov)
