@@ -11,6 +11,9 @@ Features:
 - Fixed various rendering errors.
 - Updated button styles; and color. Flashes on Clicks. - Updated tab text
 - Resolved log messages wrapping errors.
+- Select Boxes and Import/Export Buttons updated to reflect theme.
+- Dialog styles and sizes updated.
+- Achievements style updated.
 Notes: CSS is a hodgepodge of spaghetti-coding right now. Anyone is welcome to refine.
 
 v 1.1.7.7 (27 nov)
